# NUSRenderer

./: .gitignore  CMakeLists.txt
shaders/: Instances.h.glsl  MaterialConstants.h.glsl  NodeTransforms.h.glsl  Perspective.h.glsl  RenderItems.h.glsl  Vertex.h.glsl  input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
shaders/Cull/: Cull.h.glsl  _Cull.comp
shaders/Mesh/: Mesh.frag  Mesh.h.glsl  Mesh.vert
shaders/Picker/: Picker.frag  Picker.h.glsl  Picker.vert  PickerDraw.frag  PickerDraw.h.glsl  PickerDraw.vert  PickerPick.comp  PickerPick.h.glsl  _Picker.comp
shaders/Skybox/: Skybox.frag  Skybox.h.glsl  Skybox.vert
shaders/common/: Instance.mod.slang  MaterialConstant.mod.slang  Perspective.mod.slang  RenderItem.mod.slang  Vertex.mod.slang
shaders/cull/: cull.comp  cull_inputs.glsl
shaders/mesh/: input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_inputs.glsl
shaders/nightSky/: sky.comp.spv
shaders/picker/: picker.comp  picker.frag  picker.vert  picker_inputs.glsl
shaders/skybox/: skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  skybox_inputs.glsl
shaders/source/Cull/: Cull.comp.slang  Cull.mod.slang
shaders/source/Mesh/: Mesh.frag.slang  Mesh.mod.slang  Mesh.vert.slang
shaders/source/Picker/: PickerDraw.frag.slang  PickerDraw.mod.slang  PickerDraw.vert.slang  PickerPick.comp.slang  PickerPick.mod.slang
shaders/source/Skybox/: Skybox.frag.slang  Skybox.mod.slang  Skybox.vert.slang
src/: Camera.cpp  Constexprs.h  Constexprs_.h  Descriptor.cpp  Descriptor.h  Gui.cpp  Gui.h  Helper.cpp  Helper.h  ImmSubmit.cpp  Instance.cpp  Instance.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  RendererCore.cpp  RendererCore.h  RendererInfrastructure.cpp  RendererInfrastructure.h  RendererResources.cpp  RendererResources.h  RendererScene.cpp  RendererScene.h  Renderer_.cpp  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  Skybox.cpp  Skybox.h  Skybox_.h  camera.cpp  camera.h  (+32 more)
src/Data/: Camera.cpp  Camera.h  Instance.cpp  Instance.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Picker.cpp  Picker.h  Skybox.cpp  Skybox.h
src/Renderer/: Renderer.cpp  Renderer.h  RendererCore.cpp  RendererCore.h  RendererEvent.cpp  RendererEvent.h  RendererInfrastructure.cpp  RendererInfrastructure.h  RendererResources.cpp  RendererResources.h  RendererScene.cpp  RendererScene.h
src/Renderer/Scene/: Batch.cpp  Batch.h  Culler.cpp  Culler.h  Perspective.cpp  Perspective.h  Picker.cpp  Picker.h  Skybox.cpp
src/Scene/: Batch.cpp  Batch.h  Culler.cpp  Culler.h  Perspective.cpp  Perspective.h  Picker.cpp  Picker.h  Skybox.cpp  Skybox.h
src/User/: Gui.cpp  Gui.h  Picker.h
src/Utils/: Constexprs.h  Descriptor.cpp  Descriptor.h  Helper.cpp  Helper.h  ImmSubmit.cpp  ImmSubmit.h  Pipeline.cpp  Pipeline.h
